# driverless

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  gradio_app.py  main.cpp  server.py  start.sh
config/: current_params.json  default_params.json
include/: detection.hpp  odometry.hpp  params.hpp  pipeline.hpp  track.hpp  utils.hpp
output/: detected_cones.json
src/: detection.cpp  odometry.cpp  pipeline.cpp  track.cpp  utils.cpp
